Made the application work on JDK8 and JDK11 (and most likely also 9 and 10).